[package]
name = "pnpm-extra"
version = "0.1.0"
edition = "2021"
description = "A mall CLI tool that adds some pnpm commands I want"
license-file = "LICENSE"
repository = "https://github.com/simonbuchan/pnpm-extra"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
dialoguer = "0.11.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
serde_yaml = "0.9.34"
anyhow = "1.0.86"
